# Sequence-Alignment

./: .gitignore  1942568982_2697735160_basic.sh  1942568982_2697735160_efficient.sh  CMakeLists.txt  README.md  run.sh  run_basic.sh  run_efficient.sh  summary.md  summary.txt
data/: input.txt  out.txt
graphs/: memory_plot.p  time_plot.p
include/: SequenceAlignment.h  utility.h
src/: SequenceAlignment.cpp  basic.cpp  efficient.cpp  main.cpp  utility.cpp
